# sirius_bv-stress-eyetracking_summer_2025

./: .gitignore  CHECKER_PROMPT.md  README.md  comprehensive_eyetracking_analysis.py  final_research_report.md  pyproject.toml
cursor_communication/: 03_claude_4_second.md
data/: events.xls  ia_avg.xls
eyetracking/: INTEGRATED_RESULTS_SUMMARY.md  README_INTEGRATED_ANALYSIS.md  README_PRESENTATION_GRAPHS.md  integrated_stress_eyetracking_analysis.py  presentation_stress_eyetracking_graphs.py
eyetracking/by_avg/: comprehensive_eyetracking_analysis.py
eyetracking/by_avg/cursor_communication/: 02_gemini_2_5_pro_checker.md  05_gemini_2_5_pro_found_error.md  CHECKER_PROMPT.md
eyetracking/by_person/: README.md  person_level_analysis.py
eyetracking/by_person/data/: trial.xls
eyetracking/old_by_avg/: comprehensive_eyetracking_analysis.py
eyetracking/old_by_avg/cursor_communication/: 01_claude_4_first.md  04_gemini_2_5_pro_checker.md
poligraph/: PROJECT_OVERVIEW.md  README.md  README_analysis.md  RESULTS_STRESS_ANALYSIS.md  SUMMARY_RESULTS.md  data.xlsx  demo_scr_explanation.py  detailed_participant_analysis.py  run_analysis.py  script_predobrabotka.py  script_rest_work.py  script_work.py  stress_analysis_script.py  stress_dynamics_analysis.py  stress_responders_visualization.py
poligraph/analysis_results/: stress_analysis_summary.xlsx  text_level_stress_analysis.xlsx
poligraph/data/: spilberg.xlsx
poligraph/stress_dynamics_results/: detailed_stress_by_text.xlsx  final_experiment_report.xlsx  statistical_summary.xlsx  stress_dynamics_summary.xlsx
(+42 files in other folders)
